{
  "version": 4,
  "terraform_version": "1.15.1",
  "serial": 104,
  "lineage": "c21e61e6-b9d4-28a5-e0f5-803d2f8e19e2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:480582411566:vpc/vpc-06a75ad4f6c8c2a61",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0bfee2453dd78ef24",
            "default_route_table_id": "rtb-05c43be28a73e796d",
            "default_security_group_id": "sg-0c690e40cc6387c44",
            "dhcp_options_id": "dopt-05912e80fb0d78821",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-06a75ad4f6c8c2a61",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05c43be28a73e796d",
            "owner_id": "480582411566",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "480582411566",
            "id": "vpc-06a75ad4f6c8c2a61",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Control-node-ubuntu",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b6d9d3d33ba97d99",
            "arn": "arn:aws:ec2:us-east-1:480582411566:instance/i-0a5a273577f4765e1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a5a273577f4765e1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-automate-key-josh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-005a2fa94970957cf"
              }
            ],
            "primary_network_interface_id": "eni-005a2fa94970957cf",
            "private_dns": "ip-172-31-84-243.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.84.243",
            "public_dns": "ec2-13-220-159-17.compute-1.amazonaws.com",
            "public_ip": "13.220.159.17",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06614222ffe9d350f",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "terra-security-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0942fcafe68185f32",
            "tags": {
              "Name": "Control-node-ubuntu",
              "OSfamily": "ubuntu"
            },
            "tags_all": {
              "Name": "Control-node-ubuntu",
              "OSfamily": "ubuntu"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a588f329a87c90b5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "480582411566",
            "id": "i-0a5a273577f4765e1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_key_pair.my_key_pair",
            "aws_security_group.my_security_group"
          ]
        },
        {
          "index_key": "worker-ubuntu",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b6d9d3d33ba97d99",
            "arn": "arn:aws:ec2:us-east-1:480582411566:instance/i-02615d87d826d6894",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02615d87d826d6894",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-automate-key-josh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04c95a6c3df25de82"
              }
            ],
            "primary_network_interface_id": "eni-04c95a6c3df25de82",
            "private_dns": "ip-172-31-84-198.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.84.198",
            "public_dns": "ec2-100-24-22-90.compute-1.amazonaws.com",
            "public_ip": "100.24.22.90",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cb7a144d1f8a8f30",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "terra-security-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0942fcafe68185f32",
            "tags": {
              "Name": "worker-ubuntu",
              "OSfamily": "ubuntu"
            },
            "tags_all": {
              "Name": "worker-ubuntu",
              "OSfamily": "ubuntu"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a588f329a87c90b5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "480582411566",
            "id": "i-02615d87d826d6894",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_key_pair.my_key_pair",
            "aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:480582411566:security-group/sg-0a588f329a87c90b5",
            "description": "this is Inbound and outbound rules for your instance Security group",
            "egress": [],
            "id": "sg-0a588f329a87c90b5",
            "ingress": [],
            "name": "terra-security-group",
            "name_prefix": "",
            "owner_id": "480582411566",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06a75ad4f6c8c2a61"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "480582411566",
            "id": "sg-0a588f329a87c90b5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:480582411566:security-group-rule/sgr-0d3f8f85acfc7a0e8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0d3f8f85acfc7a0e8",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0a588f329a87c90b5",
            "security_group_rule_id": "sgr-0d3f8f85acfc7a0e8",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "480582411566",
            "id": "sgr-0d3f8f85acfc7a0e8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:480582411566:security-group-rule/sgr-0f33c63c09b6ce2cc",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0f33c63c09b6ce2cc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0a588f329a87c90b5",
            "security_group_rule_id": "sgr-0f33c63c09b6ce2cc",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "480582411566",
            "id": "sgr-0f33c63c09b6ce2cc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:480582411566:security-group-rule/sgr-06149597a3480d737",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-06149597a3480d737",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0a588f329a87c90b5",
            "security_group_rule_id": "sgr-06149597a3480d737",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "480582411566",
            "id": "sgr-06149597a3480d737",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.my_security_group"
          ]
        }
      ]
    }
  ]
}